--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Evaluation Automator</title>
+  <title>QEC Form Filler</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -28,6 +28,19 @@
       padding: 5px;
       font-size: 16px;
     }
+    .footer {
+      margin-top: 20px;
+      font-size: 14px;
+      color: #555;
+      text-align: center;
+    }
+    .footer a {
+      color: #086ed0;
+      text-decoration: none;
+    }
+    .footer a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -42,6 +55,12 @@
   <button class="button" id="courseEvaluation">Course Evaluation</button>
   <button class="button" id="teacherEvaluation">Teacher Evaluation</button>
   <button class="button" id="onlineLearningEvaluation">Online Learning Feedback</button>
+  
+  <div class="footer">
+    <p>By: <strong>HUNZLA ARSHAD</strong></p>
+    <p><a href="mailto:hunzlaarshad82@gmail.com">hunzlaarshad82@gmail.com</a></p>
+  </div>
+  
   <script src="popup.js"></script>
 </body>
 </html>
